syntax = "proto3";

option java_package = "com.vidz.datastore.proto";
option java_multiple_files = true;

message UserData {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string phone_number = 4;
  string role = 5;
  bool active = 6;
  string created_at = 7;
  string updated_at = 8;
}

message UserPreferences {
  UserData user_data = 1;
  bool is_logged_in = 2;
} 
